--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
 }
 
 .gradient{
-    background-image: linear-gradient(#F9FAFB, white);
+    background-image: linear-gradient(#ebebeb, white);
 }
 
 .verticalScroll::-webkit-scrollbar {
