--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,14 @@
 .category{
     border: 2px solid #3720C7 !important;
   }
+
+  .colorBtn{
+      background: #2066C7 !important;
+      border-radius: 20px !important;
+      color: white !important;
+  }
+
+  .outlineBtn{
+      color: 5099E3 !important;
+      border: 2px solid #5099E3 !important;
+  }
